--- a/homepage.html
+++ b/homepage.html
@@ -1624,8 +1624,14 @@
                 <div id="register-manager-warning" class="info-message" style="display:none; margin-top:10px;">
                     ⚠️ שים/י לב! ההרשאות בפועל למנהל/ת ניתנות במערכת. לקבלת הרשאות ניהול פנו למייל - yehudah@volcani.agri.gov.il, אם את/ה לא באמת מנהל/ת לא תוכל/י להשתמש במערכת.
                 </div>
-                <div class="info-message" id="register-manager-selection-note" style="display:none; margin-top:10px; background:#e3f2fd; border-color:#2196f3; color:#1976d2;">
-                    📋 בחירת מנהל/ת שלך תתבצע לאחר ההתחברות בעמוד "פרטי עובד"
+                <div class="form-group" id="register-my-manager-group" style="display:none; margin-top:10px;">
+                    <label>מנהל/ת שלי:</label>
+                    <select id="register-my-manager" required>
+                        <option value="">בחר/י מנהל/ת</option>
+                    </select>
+                    <div id="register-manager-loading" style="display:none; color: #64748b; font-size: 14px; margin-top: 5px;">
+                        טוען רשימת מנהלים...
+                    </div>
                 </div>
                 <div class="form-group"><label>אימייל ארגוני:</label><input type="email" id="register-email" required></div>
                 <div class="form-group"><label>סיסמה:</label><input type="password" id="register-password" required minlength="6"></div>
